# VAIC2026_Nat_Figure

./: .env.example  .gitignore  AI_COLLABORATION_LOG.md  BANKING_AI_SAFETY_POLICY.md  CLAUDE.md  PRODUCT_AI_CORE_V2.md  PROJECT_EXPLANATION.md  README.md  docker-compose.yml  production_credit_approval_architecture.md
archive/: README.md
archive/phase3-runtime-src/: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.dev.json  tsconfig.json  vitest.config.ts
backend/runtime-data/: retail-events.jsonl  retail-runs.json
backend/scripts/: test-cases.ts  test-glm-complex.ts  test-glm-simple.ts  test-orch.ts  update-timeout.ts
backend/src/: app.ts  server.ts  (+6 more)
frontend/: .dockerignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
llm-finetuning/: README.md  requirements.txt
ml-credit-service/: .gitignore  Dockerfile  MODEL_CARD.md  PRODUCTION_FINE_TUNING_PIPELINE.md  README.md  TUNING_RESULTS.md  pyproject.toml  requirements.txt
ml-credit-service/credit_risk/: __init__.py  api.py  baseline.py  calibration.py  config.py  data.py  decision.py  inference.py  losses.py  metrics.py  model.py  monitoring.py  preprocessing.py  schemas.py  source_registry.py  training.py  tuning.py
ml-credit-service/governance/: official_sources.json
ml-credit-service/scripts/: generate_demo_data.py  monitor.py  train.py  tune.py
ml-credit-service/tests/: test_api.py  test_decision.py  test_model.py  test_monitoring.py  test_preprocessing.py  test_source_registry.py
(+309 files in other folders)
